Fixed sliding shift across all sizes. I think. Maybe.

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -29,6 +29,7 @@
         padding-left: 1rem;
         padding-right: 0.5rem;
         padding-bottom: 1rem;
+        height: 70%;
     }
 }
 
@@ -68,6 +69,15 @@
         margin-top: 3rem;
         margin-bottom: 3rem;
         padding: 0.5rem;
+        height: 70%;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .sliderPage2 {
+        position: relative;
+        left: 1rem;
+        height: 100%;
     }
 }
 
@@ -107,7 +117,7 @@
 
 @media screen and (max-width: 1024px) {
     .sliderHolder1 {
-        height: 97%;
+        height: 95%;
         margin-top: 1rem;
     }
 }
@@ -115,6 +125,7 @@
 @media screen and (max-width: 768px) {
     .sliderHolder1 {
         height: 92%;
+        margin-top: 2rem;
     }
 }
 
@@ -147,7 +158,7 @@
 
 @media screen and (max-width: 1024px) {
     .sliderHolder2 {
-        height: 97%;
+        height: 95%;
         margin-top: 1rem;
     }
 }
@@ -155,6 +166,7 @@
 @media screen and (max-width: 768px) {
     .sliderHolder2 {
         height: 89%;
+        margin-top: 2rem;
     }
 }
 
@@ -197,15 +209,22 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bce2e8",endColorstr="#bce2e8",GradientType=1);
 }
 
+@media screen and (max-width: 541px) {
+    .sliderHolder3 {
+        height: 87%;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .sliderHolder3 {
         height: 92%;
+        margin-top: 2rem;
     }
 }
 
 @media screen and (max-width: 1024px) {
     .sliderHolder3 {
-        height: 97%;
+        height: 95%;
         margin-top: 1rem;
     }
 }
