--- a/styles/typography.css
+++ b/styles/typography.css
@@ -149,11 +149,11 @@ h2 {
     -moz-box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
 }
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
     .sliderTitle1 {
         margin-top: 27rem;
     }
-}
+} */
 
 @media screen and (max-width: 768px) {
     .sliderTitle1 {
@@ -195,12 +195,6 @@ h2 {
     box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
-}
-
-@media screen and (max-width: 1024px) {
-    .sliderTitle2 {
-        margin-top: 27rem;
-    }
 }
 
 @media screen and (max-width: 768px) {
